product page text size on mobile fixed

--- a/styles.css
+++ b/styles.css
@@ -441,11 +441,11 @@ h4 {
     }
 
     #productImg {
-        width: 55vw;
+        width: 70vw;
     }
 
     #productText {
-        width: 45vw;
+        width: 80vw;
     }
 
     #black {
